{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 232,
  "lineage": "3202281c-6c23-4883-abb3-ef8556a26f22",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d438b3c84bc4c403",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-81-193.compute-1.amazonaws.com",
            "public_ip": "3.216.81.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Guestbook-VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d7fe878f498ec7f2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-113-130.compute-1.amazonaws.com",
            "public_ip": "44.196.113.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Guestbook-VPC-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:internet-gateway/igw-0de684c7605e704ff",
            "id": "igw-0de684c7605e704ff",
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC"
            },
            "tags_all": {
              "Name": "Guestbook-VPC"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d438b3c84bc4c403",
            "connectivity_type": "public",
            "id": "nat-07e7bc11058ea149d",
            "network_interface_id": "eni-0c644128f9525fa22",
            "private_ip": "10.0.0.170",
            "public_ip": "3.216.81.193",
            "subnet_id": "subnet-00fa41809b25ee7dd",
            "tags": {
              "Name": "Guestbook-VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7fe878f498ec7f2",
            "connectivity_type": "public",
            "id": "nat-03e7eb45a9a2401f7",
            "network_interface_id": "eni-0df57ef7dab583ebd",
            "private_ip": "10.0.1.156",
            "public_ip": "44.196.113.130",
            "subnet_id": "subnet-015f754fa024ecdda",
            "tags": {
              "Name": "Guestbook-VPC-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eaa737f851e282f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07e7bc11058ea149d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eaa737f851e282f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0832f6261134aca321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e7eb45a9a2401f7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0832f6261134aca32",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de684c7605e704ff",
            "id": "r-rtb-06b5956e089c53a5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b5956e089c53a5b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:route-table/rtb-0eaa737f851e282f7",
            "id": "rtb-0eaa737f851e282f7",
            "owner_id": "057766946565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Guestbook-VPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-private-us-east-1a"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:route-table/rtb-0832f6261134aca32",
            "id": "rtb-0832f6261134aca32",
            "owner_id": "057766946565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Guestbook-VPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-private-us-east-1b"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:route-table/rtb-06b5956e089c53a5b",
            "id": "rtb-06b5956e089c53a5b",
            "owner_id": "057766946565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Guestbook-VPC-public"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-public"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1c39c9674169d8",
            "route_table_id": "rtb-0eaa737f851e282f7",
            "subnet_id": "subnet-08a4b617c99776ece"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04924797c5a4b4073",
            "route_table_id": "rtb-0832f6261134aca32",
            "subnet_id": "subnet-09115f6b12735429d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018e96d923e250ffd",
            "route_table_id": "rtb-0eaa737f851e282f7",
            "subnet_id": "subnet-0ed8289e1b149e8b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095a5d63b2555f41d",
            "route_table_id": "rtb-0832f6261134aca32",
            "subnet_id": "subnet-0f0738d5d159ed9ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c10b33895340eda",
            "route_table_id": "rtb-06b5956e089c53a5b",
            "subnet_id": "subnet-00fa41809b25ee7dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046c8467c0f54018c",
            "route_table_id": "rtb-06b5956e089c53a5b",
            "subnet_id": "subnet-015f754fa024ecdda"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-08a4b617c99776ece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-08a4b617c99776ece",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-db-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-db-us-east-1a"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-09115f6b12735429d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-09115f6b12735429d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-db-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-db-us-east-1b"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-0ed8289e1b149e8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0ed8289e1b149e8b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-private-us-east-1a"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-0f0738d5d159ed9ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0f0738d5d159ed9ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-private-us-east-1b"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-00fa41809b25ee7dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00fa41809b25ee7dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-public-us-east-1a"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:subnet/subnet-015f754fa024ecdda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-015f754fa024ecdda",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC-public-us-east-1b"
            },
            "tags_all": {
              "Name": "Guestbook-VPC-public-us-east-1b"
            },
            "vpc_id": "vpc-0adc67ffccd5bccca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057766946565:vpc/vpc-0adc67ffccd5bccca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e58ae0a738c192af",
            "default_route_table_id": "rtb-0acbe14321c788f7a",
            "default_security_group_id": "sg-0871ac5dda977a25c",
            "dhcp_options_id": "dopt-34e6ed4f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0adc67ffccd5bccca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acbe14321c788f7a",
            "owner_id": "057766946565",
            "tags": {
              "Name": "Guestbook-VPC"
            },
            "tags_all": {
              "Name": "Guestbook-VPC"
            }
          }
        }
      ]
    }
  ]
}